fix #12 filter overlap

--- a/admin_styles/static/admin_styles/scss/base/_changelist.scss
+++ b/admin_styles/static/admin_styles/scss/base/_changelist.scss
@@ -31,7 +31,6 @@
         top: auto;
         right: auto;
         box-sizing: border-box;
-        margin-top: -46px;
 
         h2 {
             padding: 13px 15px;
